laba8.txt
du@Du:~$ gcc -E -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/1.c
# 1 "/mnt/c/Users/egork/Desktop/q/1.c"
# 1 "<built-in>"
# 1 "<command-line>"
# 31 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 32 "<command-line>" 2
# 1 "/mnt/c/Users/egork/Desktop/q/1.c"
/mnt/c/Users/egork/Desktop/q/1.c:1:10: fatal error: in: No such file or directory
 #include "in"
          ^~~~
compilation terminated.



du@Du:~$ gcc -E -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/1.c
# 1 "/mnt/c/Users/egork/Desktop/q/1.c"
# 1 "<built-in>"
# 1 "<command-line>"
# 31 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 32 "<command-line>" 2
# 1 "/mnt/c/Users/egork/Desktop/q/1.c"


int main(){
 a=12;
 return 0;
}
du@Du:~$ gcc -S -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/1.c
/mnt/c/Users/egork/Desktop/q/1.c: In function ‘main’:
/mnt/c/Users/egork/Desktop/q/1.c:4:2: error: ‘a’ undeclared (first use in this function)
  a=12;
  ^
/mnt/c/Users/egork/Desktop/q/1.c:4:2: note: each undeclared identifier 
is reported only once for each function it appears in







du@Du:~$ gcc -S -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/3.c

du@Du:~$ gcc -c  -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/3.c
/mnt/c/Users/egork/Desktop/q/3.c: Assembler messages:
/mnt/c/Users/egork/Desktop/q/3.c:6: Error: no such instruction: `qwe'                              '






du@Du:~$ cat 
/mnt/c/Users/egork/Desktop/q/2.c  
/mnt/c/Users/egork/Desktop/q/2.h 
/mnt/c/Users/egork/Desktop/q/4.c

#include "2.h"
int fun(){
    return 0;
}
int main() {
    fun();

    return 0;
}

int fun();

int fun(){
        return 0;
}


du@Du:~$ gcc -c  -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/2.c  /mnt/c/U
sers/egork/Desktop/q/2.h /mnt/c/Users/egork/Desktop/q/4.c 


du@Du:~$ gcc  -std=c99 -pedantic -Wall /mnt/c/Users/egork/Desktop/q/2.c  /mnt/c/Users/egork/Desktop/q/2.h /mnt/c/Users/egork/Desktop/q/4.c
/tmp/cczgHjiC.o: In function `fun':
4.c:(.text+0x0): multiple definition of `fun'
/tmp/ccxnjkqB.o:2.c:(.text+0x0): first defined here
collect2: error: ld returned 1 exit status



du@Du:~$ 
gcc -c  -std=c99 -pedantic -Wall 
/mnt/c/Users/egork/Desktop/q/2.c  
/mnt/c/Users/egork/Desktop/q/2.h

du@Du:~$ gcc  -std=c99 -pedantic -Wall 
/mnt/c/Users/egork/Desktop/q/2.c  
/mnt/c/Users/egork/Desktop/q/2.h
/tmp/cccRmfIS.o: In function `main':
2.c:(.text+0xa): undefined reference to `fun'
collect2: error: ld returned 1 exit status

